# Skyinfo

./: pyproject.toml
json_files/: teachers_dict.json
skyeng_info/: parser.ipynb  parser.py
